Fix Slider crop display, fix corners of modal images on mobile

--- a/modules/custom/az_paragraphs/css/az_paragraphs_az_photo_gallery.css
+++ b/modules/custom/az_paragraphs/css/az_paragraphs_az_photo_gallery.css
@@ -12,7 +12,3 @@
 .paragraph--type--az-photo-gallery .carousel-indicators {
   margin-bottom: 0;
 }
-
-.paragraph--type--az-photo-gallery .ratio-az-carousel {
-  --bs-aspect-ratio: 45%;
-}
